--- a/12_HTML_Form_&_Button/code.html
+++ b/12_HTML_Form_&_Button/code.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
   <title>Simple HTML Form</title>
 </head>
 <body>
@@ -10,7 +10,7 @@
   <h1>Simple HTML Form</h1>
   
   <form action="/submit" method="post">
-    <!-- Text input for name -->
+    
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
     <br><br>
