--- a/6_CalculatorJS/code.html
+++ b/6_CalculatorJS/code.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Humanized Calculator</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <title>Calculator</title>
   <style>
     /* Reset some basic styles */
     * {
@@ -14,17 +13,17 @@
     }
 
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background-color: white; /* Changed from #f7f7f7 to red */
-      color: white; /* Changed from #333 to white */
+      background-color: white;
+      color: white;
     }
 
     .calculator {
-      background-color:rgb(17, 47, 146);
+      background-color: rgb(17, 47, 146);
       padding: 20px;
       border-radius: 15px;
       box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
