--- a/7_Link_JS_to_HTML_&_other/index.html
+++ b/7_Link_JS_to_HTML_&_other/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Life Expectancy & Time of Day</title>
+  <title>Project</title>
   <!-- Linking the external JavaScript file -->
   <script src="script.js" defer></script>
 </head>
