--- a/17_ImageGallery/index.html
+++ b/17_ImageGallery/index.html
@@ -5,44 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Local Image Gallery</title>
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
   <style>
-    .gallery-img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      border-radius: 10px;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
     }
 
     .gallery-container {
-      padding: 40px;
+      max-width: 1200px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
 
     h2 {
       text-align: center;
       margin-bottom: 30px;
     }
+
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .gallery-img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
 
-<div class="container gallery-container">
+<div class="gallery-container">
   <h2>My Local Image Gallery</h2>
-  <div class="row g-4">
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <img src="img1.jpg" alt="Image 1" class="gallery-img">
-    </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <img src="img2.jpg" alt="Image 2" class="gallery-img">
-    </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <img src="img3.jpg" alt="Image 3" class="gallery-img">
-    </div>
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <img src="img4.jpg" alt="Image 4" class="gallery-img">
-    </div>
+  <div class="gallery-grid">
+    <img src="img1.jpg" alt="Image 1" class="gallery-img">
+    <img src="img2.jpg" alt="Image 2" class="gallery-img">
+    <img src="img3.jpg" alt="Image 3" class="gallery-img">
+    <img src="img4.jpg" alt="Image 4" class="gallery-img">
     <!-- Add more images as needed -->
   </div>
 </div>
