--- a/1_&_2_TimeTable_School_&_Railway/code.html
+++ b/1_&_2_TimeTable_School_&_Railway/code.html
@@ -3,18 +3,79 @@
 <head>
   <meta charset="UTF-8">
   <title>Dynamic TY Time Table</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
+      font-family: Arial, sans-serif;
       padding: 20px;
       background-color: #f0f2f5;
     }
+
     h2 {
       text-align: center;
       margin-bottom: 20px;
     }
-    table {
+
+    .container {
+      max-width: 1000px;
+      margin: auto;
       background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .form-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    .form-row input {
+      padding: 10px;
+      flex: 1;
+      min-width: 150px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .form-row button {
+      padding: 10px 15px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .form-row button:hover {
+      background-color: #0056b3;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+
+    table, th, td {
+      border: 1px solid #ccc;
+    }
+
+    th, td {
+      padding: 12px;
+      text-align: left;
+    }
+
+    thead {
+      background-color: #343a40;
+      color: white;
+    }
+
+    @media (max-width: 600px) {
+      .form-row {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
@@ -22,29 +83,17 @@
 
   <h2>TY Time Table - Dynamic</h2>
 
-  <div class="container mb-4">
-    <div class="row g-2">
-      <div class="col-md-3">
-        <input type="text" id="day" class="form-control" placeholder="Day (e.g. Monday)">
-      </div>
-      <div class="col-md-3">
-        <input type="text" id="time" class="form-control" placeholder="Time Slot (e.g. 9-10)">
-      </div>
-      <div class="col-md-3">
-        <input type="text" id="subject" class="form-control" placeholder="Subject Name">
-      </div>
-      <div class="col-md-2">
-        <input type="text" id="faculty" class="form-control" placeholder="Faculty Initials">
-      </div>
-      <div class="col-md-1">
-        <button onclick="addRow()" class="btn btn-primary w-100">Add</button>
-      </div>
-    </div>
-  </div>
-
   <div class="container">
-    <table class="table table-bordered table-striped" id="timetable">
-      <thead class="table-dark">
+    <div class="form-row">
+      <input type="text" id="day" placeholder="Day (e.g. Monday)">
+      <input type="text" id="time" placeholder="Time Slot (e.g. 9-10)">
+      <input type="text" id="subject" placeholder="Subject Name">
+      <input type="text" id="faculty" placeholder="Faculty Initials">
+      <button onclick="addRow()">Add</button>
+    </div>
+
+    <table id="timetable">
+      <thead>
         <tr>
           <th>Day</th>
           <th>Time Slot</th>
@@ -53,7 +102,18 @@
         </tr>
       </thead>
       <tbody>
-        <!-- Dynamic rows will appear here -->
+        <tr>
+          <td>Monday</td>
+          <td>9:00 - 10:00</td>
+          <td>DBMS</td>
+          <td>AB</td>
+        </tr>
+        <tr>
+          <td>Tuesday</td>
+          <td>10:00 - 11:00</td>
+          <td>CN</td>
+          <td>RS</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -74,7 +134,7 @@
         newRow.insertCell(2).innerText = subject;
         newRow.insertCell(3).innerText = faculty;
 
-        // Clear inputs
+       
         document.getElementById("day").value = "";
         document.getElementById("time").value = "";
         document.getElementById("subject").value = "";
