--- a/5_3PageShoppingWebsite/contact.html
+++ b/5_3PageShoppingWebsite/contact.html
@@ -3,47 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <title>Garments Store - Contact Us</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">GarmentsStore</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      
+  <nav class="navbar">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">GarmentsStore</a>
+      <ul class="navbar-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
-  <div class="container mt-5">
-    <h2 class="text-center mb-4">Contact Us</h2>
-    <form class="w-50 mx-auto">
-      <div class="mb-3">
-        <label for="name" class="form-label">Full Name</label>
-        <input type="text" class="form-control" id="name" placeholder="Your Name">
+  <div class="contact-container">
+    <h2>Contact Us</h2>
+    <form class="contact-form">
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" placeholder="Your Name" required>
       </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" id="email" placeholder="name@example.com" required>
       </div>
-      <div class="mb-3">
-        <label for="msg" class="form-label">Message</label>
-        <textarea class="form-control" id="msg" rows="4" placeholder="How can we help you?"></textarea>
+
+      <div class="form-group">
+        <label for="msg">Message</label>
+        <textarea id="msg" rows="4" placeholder="How can we help you?" required></textarea>
       </div>
-      <button type="submit" class="btn btn-success w-100">Send Message</button>
+
+      <button type="submit" class="submit-btn">Send Message</button>
     </form>
   </div>
 
-  <footer class="bg-dark text-white text-center p-3 mt-5">© 2025 GarmentsStore</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <footer class="footer">© 2025 GarmentsStore</footer>
+
 </body>
 </html>
