--- a/5_3PageShoppingWebsite/index.html
+++ b/5_3PageShoppingWebsite/index.html
@@ -3,34 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Garments Store - Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">GarmentsStore</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      
+  <nav class="navbar">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">GarmentsStore</a>
+      <ul class="navbar-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
-  <div class="container text-center mt-5">
+  <div class="main-content">
     <h1>Welcome to GarmentsStore</h1>
     <p>Your one-stop shop for stylish clothing for all ages!</p>
-    <img src="images/logo.jpg" class="img-fluid mt-4" alt="Banner">
+    <img src="images/logo.jpg" class="banner-img" alt="Banner">
   </div>
 
-  <footer class="bg-dark text-white text-center p-3 mt-5">© 2025 GarmentsStore</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <footer class="footer">© 2025 GarmentsStore</footer>
+
 </body>
 </html>
